# traning-mbti

./: .cursorrules  .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  LOGIN_SETUP.md  MBTI診断アプリ設計書.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  README_APP.md  README_PASSWORD_CHECKER.md  README_QUIZ.md  README_SETUP.md  SPECIFICATION.md  USAGE.md  USER_MANAGEMENT.md  app.py  config.py  database.py  design_document.md  docker-compose.prod.yml  docker-compose.yml  extract_data_to_json.py  extract_to_json.py  init.sql  init_db.py  init_db.sh  logs.sh  mbti_descriptions.py  mbti_logic.py  models.py  password_checker_app.py  pyproject.toml  questions.py  requirements.txt  restart.sh  run.py  run_app.sh  (+12 more)
_prompts/: prompt_MTBI.txt  prompt_password_mater.txt  prompt_quiz.txt
app/: Dockerfile  __init__.py  app.py  auth.py  config.py  database.py  decorators.py  main.py  mbti_logic.py  models.py  questions.py  quiz_data.py  requirements.txt  routes.py  scoring.py  utils.py
data/: README.md  categories.json  it_basics_terms.json  security_terms.json
db/: init.sql
docker/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml  init.sql
docs/: DEBUGGING_GUIDE.md  DIRECTORY_STRUCTURE.md  DOCKER_README.md  QUICKSTART_DOCKER.md  README_APP.md  README_DOCKER.md  README_MYSQL.md  README_QUIZ.md  RUN_APP_EXAMPLES.md  TROUBLESHOOTING.md
models/: database.py  models.py
mysql/: init.sql
scripts/: check-container.sh  check-db.sh  clean-rebuild.sh  init-mysql.sh  init_db.py  init_db.sh  rebuild.sh  run.bat  run.sh  (+6 more)
(+126 files in other folders)
