[tool.poetry]
name = "traning-mbti"
version = "0.1.0"
description = ""
authors = ["suzaki-csc <k.suzaki@cscloud.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.2"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.1.0"
flask-login = "^0.6.3"
pymysql = "^1.1.2"
python-dotenv = "^1.1.1"
gunicorn = "^23.0.0"
cryptography = "^46.0.3"
werkzeug = "^3.1.3"
email-validator = "^2.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-flask = "^1.3.0"
flake8 = "^7.3.0"
black = "^25.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
